# eixx

./: Makefile.am  configure.ac
include/eixx/connect/: basic_otp_mailbox.hpp  basic_otp_mailbox_registry.hpp  basic_otp_node.hpp  basic_otp_node.ipp
include/eixx/marshal/: atom.hpp  defaults.hpp  eterm.hpp  eterm.ipp  eterm_format.ipp  var.hpp
include/eixx/util/: async_queue.hpp  sync.hpp
src/: Makefile.am  test_node.cpp
test/: Makefile.am
